Yaml: switched to per-line injection and using IndentAwareInjectedFileChangesHandler for fragment editor
GitOrigin-RevId: 0f58f83089213437063d200974e4f158299a45f9